Fix dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@
   --error-color: #b91c1c;
   --focus-secondary-color: #f0f0f0;
   --active-secondary-color: #e0e0e0;
+  color-scheme: light;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -26,9 +27,10 @@
     --border-color: #27272a;
     --focus-color: #cecece;
     --active-color: #e0e0e0;
+    --error-color: #f43f5e;
     --focus-secondary-color: #27272a;
     --active-secondary-color: #3f3f46;
-    --error-color: #f43f5e;
+    color-scheme: dark;
   }
 }
 
